# smartcontracts

./: .gitignore  README.md
mobile-app/: .gitignore  App.tsx  app.json  package-lock.json  package.json  tsconfig.json
mobile-app/src/: polyfills.ts
mobile-app/src/components/: SendTransaction.tsx  WalletConnect.tsx  index.ts
mobile-app/src/components/balance/: Balance.tsx  index.ts
mobile-app/src/components/common/: Button.tsx  Card.tsx  Input.tsx  index.ts
mobile-app/src/components/transaction/: TransactionHistory.tsx  index.ts
mobile-app/src/components/wallet/: index.ts
mobile-app/src/config/: constants.ts  index.ts  theme.ts
mobile-app/src/context/: SolanaProvider.tsx  index.ts
mobile-app/src/hooks/: index.ts  useBalance.ts  useSolana.ts  useWallet.ts
mobile-app/src/services/wallet/: deeplink.ts  index.ts  mwa.ts
mobile-app/src/store/: index.ts  walletStore.ts
mobile-app/src/types/: index.ts  transaction.ts  wallet.ts
mobile-app/src/utils/: formatters.ts  index.ts  validators.ts
solana-program/: .gitignore  Anchor.toml  Cargo.toml
solana-program/programs/coin_transfer/: Cargo.toml
solana-program/programs/coin_transfer/src/: errors.rs  instructions.rs  lib.rs  state.rs
solana-program/tests/: coin_transfer.ts
