[package]
name = "coin_transfer"
version = "0.1.0"
description = "Simple SOL transfer program on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "coin_transfer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
